Changed demo app from openJdk10 to openJdk8 to use Alpine linux for smaller image